go.dev/_content/css: fix unreadable pull quotes
See https://go.dev/solutions/clis.
The big teal boxes are teal-on-teal quotes.
Make them teal-on-white instead.

Reviewed-on: https://go-review.googlesource.com/c/website/+/362017
Trust: Russ Cox <rsc@golang.org>

--- a/go.dev/_content/css/styles.css
+++ b/go.dev/_content/css/styles.css
@@ -2742,8 +2742,6 @@ p.BackgroundQuote-body {
   font-size: 0.875rem;
 }
 .BackgroundQuote {
-  background-color: #007d9c;
-  color: #fff;
   margin: 1.5rem auto;
   padding: 2rem 1.5rem;
 }
